<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_list"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/et_list_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/list_name"
        android:padding="10dp"
        android:background="@drawable/light_gray_border"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/et_listColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:background="@drawable/light_gray_border"
        android:hint="@string/color"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tv_iconList"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:background="@drawable/light_gray_border"
        android:hint="@string/icon"
        android:padding="10dp"
        android:enabled="false"
        />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end">
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@color/colorWhite"
        android:textColor="@color/colorDarkBlue"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@color/colorWhite"
        android:textColor="@color/colorDarkBlue"
        />
</LinearLayout>


</LinearLayout>