<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_inner"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@color/colorWhite"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/user_name"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/light_gray_border"
                />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:layout_below="@+id/et_username"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/light_gray_border"
                />


            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/mobile_number"
                android:layout_below="@+id/et_name"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:background="@drawable/light_gray_border"
                />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:layout_below="@+id/et_mobile_number"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/light_gray_border"
                android:inputType="textEmailAddress"
                />




            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:layout_below="@+id/et_email"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:background="@drawable/light_gray_border"
                />

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/confirm_pass"
                android:gravity="top|start"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/et_password"
                android:inputType="textPassword"
                android:background="@drawable/light_gray_border"
                />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/button_border"
                android:text="@string/sign_up"
                android:layout_below="@+id/et_confirm_pass"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:onClick="signUp"
                />

            <Button
                android:id="@+id/btn_sign_up_with_google"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/button_border"
                android:text="@string/sign_up_with_google"
                android:layout_below="@+id/btn_sign_up"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:drawableStart="@drawable/ic_google"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered"
                android:layout_below="@id/btn_sign_up_with_google"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:onClick="login"
                />
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>