<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorWhite"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_forgetPassMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/forgetPass_msg"
            android:textColor="@color/colorBlack"
            android:lineSpacingExtra="10dp"
            />

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/action"
            android:textColor="@color/colorCyan"
            android:lineSpacingExtra="10dp"
            android:layout_below="@+id/tv_forgetPassMsg"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:layout_below="@+id/tv_action"
            android:gravity="top|start"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_gray_border"
            />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="260dp"
            android:layout_height="52dp"
            android:text="@string/send"
            android:layout_below="@+id/et_email"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_cyan_border"
            />



    </RelativeLayout>



</RelativeLayout>