<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="40dp"
        android:background="@color/colorWhite"
        android:padding="30dp">





        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:gravity="top|start"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/light_gray_border"
            />

        <EditText
            android:id="@+id/et_rePassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/confirm_pass"
            android:layout_below="@+id/et_password"
            android:gravity="top|start"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/light_gray_border"
            />

        <Button
            android:layout_width="260dp"
            android:layout_height="52dp"
            android:text="@string/save"
            android:layout_below="@+id/et_rePassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_cyan_border"
            />
    </RelativeLayout>

</RelativeLayout>

